--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
     "@angular/router": "^7.2.10",
     "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "ajv": "^6.10.0",
+    "angularcli": "^6.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.0.0",
     "icao": "^1.0.1",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "popper.js": "^1.14.7",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular-devkit/build-angular": "^0.900.5",
     "@angular/cli": "^7.3.6",
     "@angular/compiler-cli": "^7.2.10",
     "@angular/language-service": "^7.2.10",
